{
  "version": 4,
  "terraform_version": "1.10.5",
  "serial": 205,
  "lineage": "749e207f-592d-68eb-c596-134b53951b02",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-north-1:794038256791:listener/app/stylish-website-alb/ba188c9f1325ea73/1ee63348c6e5af2b",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-north-1:794038256791:targetgroup/web-20250320101115650400000006/8090f266ee756bee",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-north-1:794038256791:listener/app/stylish-website-alb/ba188c9f1325ea73/1ee63348c6e5af2b",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-north-1:794038256791:loadbalancer/app/stylish-website-alb/ba188c9f1325ea73",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": false,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb",
            "module.alb.aws_lb.this",
            "module.alb.aws_lb_target_group.main",
            "module.alb.aws_security_group.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:794038256791:security-group/sg-00bd0432b89564072",
            "description": "Security group for ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00bd0432b89564072",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "alb-sg",
            "name_prefix": "",
            "owner_id": "794038256791",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "production",
              "Name": "alb-sg",
              "Project": "stylish-website",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "alb-sg",
              "Project": "stylish-website",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cdb6baa772ae8595"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "website_node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:794038256791:security-group/sg-0a9d6ba00350520fd",
            "description": "Security group for website build nodes",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a9d6ba00350520fd",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-00bd0432b89564072"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "website-node-sg",
            "name_prefix": "",
            "owner_id": "794038256791",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "production",
              "Name": "website-node-sg",
              "Project": "stylish-website",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "website-node-sg",
              "Project": "stylish-website",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cdb6baa772ae8595"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-north-1:794038256791:loadbalancer/app/stylish-website-alb/ba188c9f1325ea73",
            "arn_suffix": "app/stylish-website-alb/ba188c9f1325ea73",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "stylish-website-alb-296335331.eu-north-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": true,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:eu-north-1:794038256791:loadbalancer/app/stylish-website-alb/ba188c9f1325ea73",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "stylish-website-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-00bd0432b89564072",
              "sg-06580a1b23d786695"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-01891a2acce4b78b9"
              },
              {
                "subnet_id": "subnet-0369a07484c34c946"
              },
              {
                "subnet_id": "subnet-05d2772e453b68afb"
              }
            ],
            "subnets": [
              "subnet-01891a2acce4b78b9",
              "subnet-0369a07484c34c946",
              "subnet-05d2772e453b68afb"
            ],
            "tags": {
              "Name": "stylish-website-alb"
            },
            "tags_all": {
              "Name": "stylish-website-alb"
            },
            "timeouts": {
              "create": "10m",
              "delete": "10m",
              "update": "10m"
            },
            "vpc_id": "vpc-0cdb6baa772ae8595",
            "xff_header_processing_mode": "append",
            "zone_id": "Z23TAZ6LKFMNIO"
          },
          "dependencies": [
            "aws_security_group.alb",
            "module.alb.aws_security_group.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-north-1:794038256791:targetgroup/web-20250320101115650400000006/8090f266ee756bee",
            "arn_suffix": "targetgroup/web-20250320101115650400000006/8090f266ee756bee",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-north-1:794038256791:targetgroup/web-20250320101115650400000006/8090f266ee756bee",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:eu-north-1:794038256791:loadbalancer/app/stylish-website-alb/ba188c9f1325ea73"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "web-20250320101115650400000006",
            "name_prefix": "web-",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "web-"
            },
            "tags_all": {
              "Name": "web-"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0cdb6baa772ae8595"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:794038256791:security-group/sg-06580a1b23d786695",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-06580a1b23d786695",
            "ingress": [],
            "name": "stylish-website-alb-20250320101115514700000004",
            "name_prefix": "stylish-website-alb-",
            "owner_id": "794038256791",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "stylish-website-alb"
            },
            "tags_all": {
              "Name": "stylish-website-alb"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cdb6baa772ae8595"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:794038256791:network-acl/acl-0094cd33dee9741cd",
            "default_network_acl_id": "acl-0094cd33dee9741cd",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0094cd33dee9741cd",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "794038256791",
            "subnet_ids": [
              "subnet-01891a2acce4b78b9",
              "subnet-0369a07484c34c946",
              "subnet-05d2772e453b68afb",
              "subnet-085c84c839432d15e",
              "subnet-0d50f63799e83c9a3",
              "subnet-0ec5c9ea3c8371ed2"
            ],
            "tags": {
              "Environment": "production",
              "Name": "stylish-website-vpc-default",
              "Project": "stylish-website",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "stylish-website-vpc-default",
              "Project": "stylish-website",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0cdb6baa772ae8595"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:794038256791:route-table/rtb-0e7516fdd677e5e5b",
            "default_route_table_id": "rtb-0e7516fdd677e5e5b",
            "id": "rtb-0e7516fdd677e5e5b",
            "owner_id": "794038256791",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "production",
              "Name": "stylish-website-vpc-default",
              "Project": "stylish-website",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "stylish-website-vpc-default",
              "Project": "stylish-website",
              "Terraform": "true"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0cdb6baa772ae8595"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0655999810fa5e625",
            "arn": "arn:aws:ec2:eu-north-1:794038256791:elastic-ip/eipalloc-0655999810fa5e625",
            "association_id": "eipassoc-0247a67ef80fa00a6",
            "domain": "vpc",
            "id": "eipalloc-0655999810fa5e625",
            "network_border_group": "eu-north-1",
            "network_interface": "eni-036f42a33f1d88cd7",
            "private_dns": "ip-10-0-4-131.eu-north-1.compute.internal",
            "private_ip": "10.0.4.131",
            "public_dns": "ec2-13-49-124-74.eu-north-1.compute.amazonaws.com",
            "public_ip": "13.49.124.74",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "production",
              "Name": "stylish-website-vpc-eu-north-1a",
              "Project": "stylish-website",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "stylish-website-vpc-eu-north-1a",
              "Project": "stylish-website",
              "Terraform": "true"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0853af1b0b9814197",
            "arn": "arn:aws:ec2:eu-north-1:794038256791:elastic-ip/eipalloc-0853af1b0b9814197",
            "association_id": "eipassoc-089ff3b501e1ccf44",
            "domain": "vpc",
            "id": "eipalloc-0853af1b0b9814197",
            "network_border_group": "eu-north-1",
            "network_interface": "eni-0f25109d2537b2a18",
            "private_dns": "ip-10-0-5-182.eu-north-1.compute.internal",
            "private_ip": "10.0.5.182",
            "public_dns": "ec2-16-16-44-64.eu-north-1.compute.amazonaws.com",
            "public_ip": "16.16.44.64",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "production",
              "Name": "stylish-website-vpc-eu-north-1b",
              "Project": "stylish-website",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "stylish-website-vpc-eu-north-1b",
              "Project": "stylish-website",
              "Terraform": "true"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02fd2d599a9ec523f",
            "arn": "arn:aws:ec2:eu-north-1:794038256791:elastic-ip/eipalloc-02fd2d599a9ec523f",
            "association_id": "eipassoc-0582a644f9e4be593",
            "domain": "vpc",
            "id": "eipalloc-02fd2d599a9ec523f",
            "network_border_group": "eu-north-1",
            "network_interface": "eni-0202a54d8dc3f693d",
            "private_dns": "ip-10-0-6-95.eu-north-1.compute.internal",
            "private_ip": "10.0.6.95",
            "public_dns": "ec2-51-20-146-12.eu-north-1.compute.amazonaws.com",
            "public_ip": "51.20.146.12",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "production",
              "Name": "stylish-website-vpc-eu-north-1c",
              "Project": "stylish-website",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "stylish-website-vpc-eu-north-1c",
              "Project": "stylish-website",
              "Terraform": "true"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:794038256791:internet-gateway/igw-023a8d574865181a1",
            "id": "igw-023a8d574865181a1",
            "owner_id": "794038256791",
            "tags": {
              "Environment": "production",
              "Name": "stylish-website-vpc",
              "Project": "stylish-website",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "stylish-website-vpc",
              "Project": "stylish-website",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0cdb6baa772ae8595"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0655999810fa5e625",
            "association_id": "eipassoc-0247a67ef80fa00a6",
            "connectivity_type": "public",
            "id": "nat-0d4e69f71e7d8442d",
            "network_interface_id": "eni-036f42a33f1d88cd7",
            "private_ip": "10.0.4.131",
            "public_ip": "13.49.124.74",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0369a07484c34c946",
            "tags": {
              "Environment": "production",
              "Name": "stylish-website-vpc-eu-north-1a",
              "Project": "stylish-website",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "stylish-website-vpc-eu-north-1a",
              "Project": "stylish-website",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0853af1b0b9814197",
            "association_id": "eipassoc-089ff3b501e1ccf44",
            "connectivity_type": "public",
            "id": "nat-0845c4a36b5e37088",
            "network_interface_id": "eni-0f25109d2537b2a18",
            "private_ip": "10.0.5.182",
            "public_ip": "16.16.44.64",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-01891a2acce4b78b9",
            "tags": {
              "Environment": "production",
              "Name": "stylish-website-vpc-eu-north-1b",
              "Project": "stylish-website",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "stylish-website-vpc-eu-north-1b",
              "Project": "stylish-website",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02fd2d599a9ec523f",
            "association_id": "eipassoc-0582a644f9e4be593",
            "connectivity_type": "public",
            "id": "nat-02fc16a865e6755ca",
            "network_interface_id": "eni-0202a54d8dc3f693d",
            "private_ip": "10.0.6.95",
            "public_ip": "51.20.146.12",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-05d2772e453b68afb",
            "tags": {
              "Environment": "production",
              "Name": "stylish-website-vpc-eu-north-1c",
              "Project": "stylish-website",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "stylish-website-vpc-eu-north-1c",
              "Project": "stylish-website",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-01367fd60214733391080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0d4e69f71e7d8442d",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-01367fd6021473339",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-043ee3318fa72ac331080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0845c4a36b5e37088",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-043ee3318fa72ac33",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-052529f09bb2d1b3d1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-02fc16a865e6755ca",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-052529f09bb2d1b3d",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-023a8d574865181a1",
            "id": "r-rtb-0106275adbd7417e31080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0106275adbd7417e3",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:794038256791:route-table/rtb-01367fd6021473339",
            "id": "rtb-01367fd6021473339",
            "owner_id": "794038256791",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0d4e69f71e7d8442d",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "production",
              "Name": "stylish-website-vpc-private-eu-north-1a",
              "Project": "stylish-website",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "stylish-website-vpc-private-eu-north-1a",
              "Project": "stylish-website",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cdb6baa772ae8595"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:794038256791:route-table/rtb-043ee3318fa72ac33",
            "id": "rtb-043ee3318fa72ac33",
            "owner_id": "794038256791",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0845c4a36b5e37088",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "production",
              "Name": "stylish-website-vpc-private-eu-north-1b",
              "Project": "stylish-website",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "stylish-website-vpc-private-eu-north-1b",
              "Project": "stylish-website",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cdb6baa772ae8595"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:794038256791:route-table/rtb-052529f09bb2d1b3d",
            "id": "rtb-052529f09bb2d1b3d",
            "owner_id": "794038256791",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-02fc16a865e6755ca",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "production",
              "Name": "stylish-website-vpc-private-eu-north-1c",
              "Project": "stylish-website",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "stylish-website-vpc-private-eu-north-1c",
              "Project": "stylish-website",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cdb6baa772ae8595"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:794038256791:route-table/rtb-0106275adbd7417e3",
            "id": "rtb-0106275adbd7417e3",
            "owner_id": "794038256791",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-023a8d574865181a1",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "production",
              "Name": "stylish-website-vpc-public",
              "Project": "stylish-website",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "stylish-website-vpc-public",
              "Project": "stylish-website",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cdb6baa772ae8595"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e6c0ccbb91412d03",
            "route_table_id": "rtb-01367fd6021473339",
            "subnet_id": "subnet-0d50f63799e83c9a3"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c56f9f0673a62dd6",
            "route_table_id": "rtb-043ee3318fa72ac33",
            "subnet_id": "subnet-0ec5c9ea3c8371ed2"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fcbf836190d98ba0",
            "route_table_id": "rtb-052529f09bb2d1b3d",
            "subnet_id": "subnet-085c84c839432d15e"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-069c1bc2194b681fe",
            "route_table_id": "rtb-0106275adbd7417e3",
            "subnet_id": "subnet-0369a07484c34c946"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0eaa20b48fe178fb5",
            "route_table_id": "rtb-0106275adbd7417e3",
            "subnet_id": "subnet-01891a2acce4b78b9"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02d587cb6c183a1ee",
            "route_table_id": "rtb-0106275adbd7417e3",
            "subnet_id": "subnet-05d2772e453b68afb"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:794038256791:subnet/subnet-0d50f63799e83c9a3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1a",
            "availability_zone_id": "eun1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d50f63799e83c9a3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "794038256791",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "production",
              "Name": "stylish-website-vpc-private-eu-north-1a",
              "Project": "stylish-website",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "stylish-website-vpc-private-eu-north-1a",
              "Project": "stylish-website",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0cdb6baa772ae8595"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:794038256791:subnet/subnet-0ec5c9ea3c8371ed2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1b",
            "availability_zone_id": "eun1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ec5c9ea3c8371ed2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "794038256791",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "production",
              "Name": "stylish-website-vpc-private-eu-north-1b",
              "Project": "stylish-website",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "stylish-website-vpc-private-eu-north-1b",
              "Project": "stylish-website",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0cdb6baa772ae8595"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:794038256791:subnet/subnet-085c84c839432d15e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1c",
            "availability_zone_id": "eun1-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-085c84c839432d15e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "794038256791",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "production",
              "Name": "stylish-website-vpc-private-eu-north-1c",
              "Project": "stylish-website",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "stylish-website-vpc-private-eu-north-1c",
              "Project": "stylish-website",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0cdb6baa772ae8595"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:794038256791:subnet/subnet-0369a07484c34c946",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1a",
            "availability_zone_id": "eun1-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0369a07484c34c946",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "794038256791",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "production",
              "Name": "stylish-website-vpc-public-eu-north-1a",
              "Project": "stylish-website",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "stylish-website-vpc-public-eu-north-1a",
              "Project": "stylish-website",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0cdb6baa772ae8595"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:794038256791:subnet/subnet-01891a2acce4b78b9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1b",
            "availability_zone_id": "eun1-az2",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01891a2acce4b78b9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "794038256791",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "production",
              "Name": "stylish-website-vpc-public-eu-north-1b",
              "Project": "stylish-website",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "stylish-website-vpc-public-eu-north-1b",
              "Project": "stylish-website",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0cdb6baa772ae8595"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:794038256791:subnet/subnet-05d2772e453b68afb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1c",
            "availability_zone_id": "eun1-az3",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05d2772e453b68afb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "794038256791",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "production",
              "Name": "stylish-website-vpc-public-eu-north-1c",
              "Project": "stylish-website",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "stylish-website-vpc-public-eu-north-1c",
              "Project": "stylish-website",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0cdb6baa772ae8595"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:794038256791:vpc/vpc-0cdb6baa772ae8595",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0094cd33dee9741cd",
            "default_route_table_id": "rtb-0e7516fdd677e5e5b",
            "default_security_group_id": "sg-09b9752057ed98f85",
            "dhcp_options_id": "dopt-087d02cab820d24b8",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0cdb6baa772ae8595",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e7516fdd677e5e5b",
            "owner_id": "794038256791",
            "tags": {
              "Environment": "production",
              "Name": "stylish-website-vpc",
              "Project": "stylish-website",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "stylish-website-vpc",
              "Project": "stylish-website",
              "Terraform": "true"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}